deps/v8/test/message/fail/octal-template-literal.out
*%(basename)s:7: SyntaxError: Octal escape sequences are not allowed in template strings.
`\123`
  ^^
SyntaxError: Octal escape sequences are not allowed in template strings.
